--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@elysiajs/eden": "^1.1.3",
     "@elysiajs/swagger": "^1.1.1",
     "elysia": "^1.1.13",
     "next": "14.2.5",
