--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "@elysiajs/eden": "^1.1.3",
     "@elysiajs/swagger": "^1.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "elysia": "^1.1.13",
+    "lucide-react": "^0.445.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "typescript": "^5",
