Initial script and controller setup

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "bun test",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "bun db/migrate.ts",
-    "db:seed": "bun db/seed.ts"
+    "db:seed": "bun db/seed.ts",
+    "generate:model": "bun scripts/generator.ts "
   },
   "dependencies": {
     "@elysiajs/eden": "^1.1.3",
