--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   "dependencies": {
     "@elysiajs/eden": "^1.1.3",
     "@elysiajs/swagger": "^1.1.1",
+    "@sinclair/typebox": "^0.33.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
+    "drizzle-typebox": "^0.1.1",
     "elysia": "^1.1.13",
     "lucide-react": "^0.445.0",
+    "nanoid": "^5.0.7",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
