--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bend-stack",
+  "name": "send-stack",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,6 +16,7 @@
   "dependencies": {
     "@elysiajs/eden": "^1.1.3",
     "@elysiajs/swagger": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@sinclair/typebox": "^0.33.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
