--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@elysiajs/eden": "^1.1.3",
     "@elysiajs/swagger": "^1.1.1",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@sinclair/typebox": "^0.33.12",
