--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "drizzle-orm": "^0.33.0",
     "drizzle-typebox": "^0.1.1",
     "elysia": "^1.1.13",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "lucide-react": "^0.445.0",
     "nanoid": "^5.0.7",
     "next": "14.2.5",
