--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "bun --bun next build",
     "start": "bun --bun next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "test": "bun test",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "bun db/migrate.ts",
