--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "bun db/migrate.ts",
     "db:seed": "bun db/seed.ts",
-    "generate:model": "bun scripts/generator.ts "
+    "generate:backend": "bun scripts/generator.ts "
   },
   "dependencies": {
     "@elysiajs/eden": "^1.1.3",
