--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "@sinclair/typebox": "^0.33.12",
+    "@sinclair/typebox": "0.32.34",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
