--- a/package.json
+++ b/package.json
@@ -1,55 +1,57 @@
 {
-  "name": "send-stack",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "bun --bun next dev",
-    "build": "bun --bun next build",
-    "start": "bun --bun next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "test": "bun test",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "bun db/migrate.ts",
-    "db:seed": "bun db/seed.ts",
-    "generate:backend": "bun scripts/generator.ts backend",
-    "generate:frontend": "bun scripts/generator.ts frontend"
-  },
-  "dependencies": {
-    "@elysiajs/eden": "^1.1.3",
-    "@elysiajs/swagger": "^1.1.1",
-    "@hookform/resolvers": "^3.9.0",
-    "@radix-ui/react-alert-dialog": "^1.1.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@sinclair/typebox": "0.32.34",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "drizzle-orm": "^0.33.0",
-    "drizzle-typebox": "^0.1.1",
-    "elysia": "^1.1.13",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
-    "lucide-react": "^0.445.0",
-    "nanoid": "^5.0.7",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.53.0",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@types/bun": "latest",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "drizzle-kit": "^0.24.2",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8",
-    "prettier": "3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "send-stack",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "bun --bun next dev",
+		"build": "bun --bun next build",
+		"start": "bun --bun next start",
+		"lint": "next lint",
+		"lint:fix": "next lint --fix",
+		"format": "bun prettier --write .",
+		"format:check": "bun prettier --check .",
+		"test": "bun test",
+		"db:generate": "drizzle-kit generate",
+		"db:migrate": "bun db/migrate.ts",
+		"db:seed": "bun db/seed.ts",
+		"generate:backend": "bun scripts/generator.ts backend",
+		"generate:frontend": "bun scripts/generator.ts frontend"
+	},
+	"dependencies": {
+		"@elysiajs/eden": "^1.1.3",
+		"@elysiajs/swagger": "^1.1.1",
+		"@hookform/resolvers": "^3.9.0",
+		"@radix-ui/react-alert-dialog": "^1.1.1",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@sinclair/typebox": "0.32.34",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"drizzle-orm": "^0.33.0",
+		"drizzle-typebox": "^0.1.1",
+		"elysia": "^1.1.13",
+		"eslint-plugin-simple-import-sort": "^12.1.1",
+		"lucide-react": "^0.445.0",
+		"nanoid": "^5.0.7",
+		"next": "14.2.5",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-hook-form": "^7.53.0",
+		"tailwind-merge": "^2.5.2",
+		"tailwindcss-animate": "^1.0.7"
+	},
+	"devDependencies": {
+		"@types/bun": "latest",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"drizzle-kit": "^0.24.2",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.5",
+		"postcss": "^8",
+		"prettier": "3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.6",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	}
 }
