--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"bun-types": "^1.1.29",
 		"drizzle-kit": "^0.24.2",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.5",
