Run the generator and setup tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
 							],
 							["^react", "^next"],
 							["^@?\\w"],
-							["^(@/db|@/app||@/components|@/lib/@/scripts)(/.*|$)"],
+							["^(@/db|@/app|@/components|@/lib/@/scripts)(/.*|$)"],
 							["^\\u0000"],
 							["^\\.\\.(?!/?$)", "^\\.\\./?$"],
 							["^\\./(?=.*/)(?!/?$)", "^\\.(?!/?$)", "^\\./?$"],
