--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@elysiajs/eden": "^1.1.3",
 		"@elysiajs/swagger": "^1.1.1",
 		"@hookform/resolvers": "^3.9.0",
+		"@libsql/client": "^0.14.0",
 		"@radix-ui/react-alert-dialog": "^1.1.1",
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
@@ -28,6 +29,7 @@
 		"bcryptjs": "^2.4.3",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.33.0",
 		"drizzle-typebox": "^0.1.1",
 		"elysia": "^1.1.13",
