Get tests working with test Turso DB

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"format:check": "bun prettier --check .",
 		"test": "bun test",
 		"db:generate": "drizzle-kit generate",
-		"db:migrate": "bun db/migrate.ts",
+		"db:migrate": "drizzle-kit migrate",
 		"db:seed": "bun db/seed.ts",
 		"generate:backend": "bun scripts/generator.ts backend",
 		"generate:frontend": "bun scripts/generator.ts frontend"
