Add select and textarea

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@libsql/client": "^0.14.0",
 		"@radix-ui/react-alert-dialog": "^1.1.1",
 		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-select": "^2.1.2",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@sinclair/typebox": "0.32.34",
 		"bcryptjs": "^2.4.3",
