Add backend tests for blogs

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"db:migrate": "drizzle-kit migrate",
 		"db:seed": "bun db/seed.ts",
 		"generate:backend": "bun scripts/generator.ts backend",
-		"generate:frontend": "bun scripts/generator.ts frontend"
+		"generate:frontend": "bun scripts/generator.ts frontend",
+		"generate:tests": "bun scripts/generator.ts tests"
 	},
 	"dependencies": {
 		"@elysiajs/eden": "^1.1.3",
