--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.15",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/bun": "latest",
 		"@types/node": "^20",
