--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"lucide-react": "^0.445.0",
 		"nanoid": "^5.0.7",
 		"next": "14.2.5",
+		"next-themes": "^0.3.0",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-hook-form": "^7.53.0",
