--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
+DEV_TURSO_CONNECTION_URL=
+DEV_TURSO_AUTH_TOKEN=
+TEST_TURSO_CONNECTION_URL=
+TEST_TURSO_AUTH_TOKEN=
 TURSO_CONNECTION_URL=
 TURSO_AUTH_TOKEN=
+AUTH_SECRET=
